--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {}
+    "paths": {
+      "@app/packages": [
+        "packages/src"
+      ],
+      "@app/packages/*": [
+        "packages/src/*"
+      ]
+    }
   }
 }
